crates/spicy_lang/src/lexer/snapshots/spicy_lang__lexer__tests__err_cases@unterminated_slash_star.spl.snap
---
source: crates/spicy_lang/src/lexer/mod.rs
expression: "dump(&file_name(path), &src)"
input_file: crates/spicy_lang/test_data/lexer/err/unterminated_slash_star.spl
---
KwLet "let"
Whitespace " "
Ident "a"
Whitespace " "
Eq "="
Whitespace " "
Quantity "1"
Semi ";"
Whitespace "\n"
UnterminatedBlockComment "/*/"
Eof ""

--- errors ---
E-unterminated-comment UnterminatedBlockComment 11..13 "/*"

--- rendered ---
error[E-unterminated-comment]: unterminated block comment
  --> unterminated_slash_star.spl:2:1
  |
2 | /*/
  | ^^ this comment is never closed
  |
  = help: add `*/` (block comments nest, so each `/*` needs one)
