crates/spicy_lang/src/lexer/snapshots/spicy_lang__lexer__tests__ok_cases@comments.spl.snap
---
source: crates/spicy_lang/src/lexer/mod.rs
expression: "dump(&file_name(path), &src)"
input_file: crates/spicy_lang/test_data/lexer/ok/comments.spl
---
LineComment "// a line comment"
Whitespace "\n"
LineComment "//// also a plain comment, as in Rust"
Whitespace "\n"
DocComment "/// a doc comment"
Whitespace "\n"
DocComment "///"
Whitespace "\n"
BlockComment "/* a block comment */"
Whitespace "\n"
BlockComment "/**/"
Whitespace "\n"
BlockComment "/* outer /* nested */ still outer */"
Whitespace "\n"
KwLet "let"
Whitespace " "
Ident "x"
Whitespace " "
Eq "="
Whitespace " "
Quantity "1"
Semi ";"
Whitespace " "
LineComment "// trailing"
Whitespace "\n"
BlockComment "/* multi\n   line */"
Whitespace "\n"
Eof ""
