crates/spicy_lang/src/lexer/snapshots/spicy_lang__lexer__tests__ok_cases@crlf.spl.snap
---
source: crates/spicy_lang/src/lexer/mod.rs
assertion_line: 324
expression: "dump(&file_name(path), &src)"
input_file: crates/spicy_lang/test_data/lexer/ok/crlf.spl
---
KwBlock "block"
Whitespace " "
Ident "A"
Whitespace " "
LBrace "{"
RBrace "}"
Whitespace "\r\n\r\n"
KwCircuit "circuit"
Whitespace " "
Ident "A"
Whitespace " "
LBrace "{"
Whitespace "\r\n    "
KwNet "net"
Whitespace " "
Ident "b"
Semi ";"
Whitespace "\r\n"
RBrace "}"
Whitespace "\r\n"
Eof ""
