crates/spicy_lang/src/lexer/snapshots/spicy_lang__lexer__tests__ok_cases@keywords.spl.snap
---
source: crates/spicy_lang/src/lexer/mod.rs
assertion_line: 320
expression: "dump(&file_name(path), &src)"
input_file: crates/spicy_lang/test_data/lexer/ok/keywords.spl
---
LineComment "// Keywords."
Whitespace "\n"
KwBlock "block"
Whitespace " "
KwCircuit "circuit"
Whitespace " "
KwSetup "setup"
Whitespace " "
KwContract "contract"
Whitespace " "
KwEnv "env"
Whitespace " "
KwConst "const"
Whitespace " "
KwPub "pub"
Whitespace " "
KwNet "net"
Whitespace " "
KwLet "let"
Whitespace " "
KwSpec "spec"
Whitespace " "
KwWithin "within"
Whitespace " "
KwFor "for"
Whitespace " "
KwIn "in"
Whitespace "\n"
LineComment "// Reserved."
Whitespace "\n"
KwReserved "use"
Whitespace " "
KwReserved "mod"
Whitespace " "
KwReserved "fn"
Whitespace " "
KwReserved "enum"
Whitespace " "
KwReserved "type"
Whitespace " "
KwReserved "trait"
Whitespace " "
KwReserved "impl"
Whitespace " "
KwReserved "if"
Whitespace " "
KwReserved "else"
Whitespace " "
KwReserved "match"
Whitespace " "
KwReserved "where"
Whitespace " "
KwReserved "as"
Whitespace " "
KwReserved "true"
Whitespace " "
KwReserved "false"
Whitespace " "
KwReserved "self"
Whitespace " "
KwReserved "super"
Whitespace " "
KwReserved "crate"
Whitespace "\n"
KwReserved "signal"
Whitespace " "
KwReserved "interface"
Whitespace " "
KwReserved "family"
Whitespace " "
KwReserved "rated"
Whitespace " "
KwReserved "ensure"
Whitespace "\n"
LineComment "// Names: contextual words, a keyword's other case, words that start like one, words"
Whitespace "\n"
LineComment "// no longer reserved (v5 writes a test bench as a `setup`, a parameter as a generic),"
Whitespace "\n"
LineComment "// and v0.1's keywords."
Whitespace "\n"
Ident "part"
Whitespace " "
Ident "from"
Whitespace " "
Ident "on"
Whitespace " "
Ident "In"
Whitespace " "
Ident "Out"
Whitespace " "
Ident "input"
Whitespace " "
Ident "_private"
Whitespace " "
Ident "r1_2"
Whitespace " "
Ident "bench"
Whitespace " "
Ident "param"
Whitespace " "
Ident "port"
Whitespace " "
Ident "assume"
Whitespace "\n"
Ident "mode"
Whitespace " "
Ident "event"
Whitespace " "
Ident "observe"
Whitespace " "
Ident "emits"
Whitespace " "
Ident "with"
Whitespace " "
Ident "window"
Whitespace " "
Ident "at"
Whitespace " "
Ident "temp"
Whitespace "\n"
Eof ""
