crates/spicy_lang/src/lexer/snapshots/spicy_lang__lexer__tests__ok_cases@no_trailing_newline.spl.snap
---
source: crates/spicy_lang/src/lexer/mod.rs
expression: "dump(&file_name(path), &src)"
input_file: crates/spicy_lang/test_data/lexer/ok/no_trailing_newline.spl
---
KwLet "let"
Whitespace " "
Ident "x"
Whitespace " "
Eq "="
Whitespace " "
Quantity "47k"
Eof ""
